# luke-trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml
backtest/: harness.py  metrics.py  run_phase0a.py  run_phase0a_b.py  run_phase0b.py
bot/data/: binance_loader.py  historical.py  hyperliquid_client.py
bot/live/: notifier.py  paper_trader.py  run_paper.py
bot/risk/: manager.py
bot/strategies/: donchian_atr.py  llm_eventdriven.py
docs/: architecture.md  phase-0a-plan.md  risk.md
docs/decisions/: 0001-phase-0-crypto-only.md  0002-phase0a-verdict.md  0003-phase0b-verdict.md
scripts/: check_top_volumes.py
tests/: test_historical.py  test_risk.py
