[project]
name = "luke-trading-bot"
version = "0.0.1"
description = "Automated crypto trading bot — Phase 0 POC"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=2.0",
    "python-dotenv>=1.0",
    "anthropic>=0.39",
    "pyarrow>=16.0",
    "ccxt>=4.5.49",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
line-length = 100
target-version = "py311"
